# cxdb

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.coolify.yml
.github/workflows/: publish-images.yml
cxtx/: Cargo.toml  README.md
cxtx/src/: cli.rs  conversation_registry_bundle.json  cxdb_http.rs  delivery.rs  ledger.rs  lib.rs  main.rs  proxy.rs  session.rs  turns.rs
cxtx/src/provider/: anthropic.rs  mod.rs  openai.rs
cxtx/tests/: integration.rs
deploy/docker-compose/: .env.example  docker-compose.test.yml  docker-compose.yml
deploy/kubernetes/: configmap.yaml  secret.yaml.example
docs/: ADR.md  deployment.md  development.md  getting-started.md
examples/: README.md
frontend/: next.config.mjs  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/: ContextDebugger.tsx  ContextList.tsx  CxdbApp.tsx
frontend/hooks/: useEventStream.ts
frontend/lib/: api.ts  clientTags.ts
frontend/lib/cql/: index.ts
frontend/lib/themes/: context.tsx  definitions.ts  types.ts
frontend/tests/: tag-filter.spec.ts
gateway/: .env.example  Dockerfile
gateway/cmd/server/: main.go
gateway/internal/config/: config.go
gateway/pkg/auth/: google.go  middleware.go  middleware_test.go  oidc.go  oidc_test.go
gateway/pkg/proxy/: server.go
server/src/projection/: mod.rs
server/src/turn_store/: mod.rs
server/tests/: registry_projection.rs
